--- a/app/src/main/res/layout/activity_my_fridge.xml
+++ b/app/src/main/res/layout/activity_my_fridge.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.profile.myratings.MyRatingsActivity">
+    tools:context=".presentation.profile.myfridge.MyFridgeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+    <include layout="@layout/content_empty_beer_list" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
