--- a/app/src/main/res/layout/fragment_my_fridge_listenry.xml
+++ b/app/src/main/res/layout/fragment_my_fridge_listenry.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:text="auf der Wunschliste seit"
+                android:text="im Kühlschrank seit"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
