--- a/app/src/main/res/layout/fragment_my_fridge_listenry.xml
+++ b/app/src/main/res/layout/fragment_my_fridge_listenry.xml
@@ -51,7 +51,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
             <Button
-                android:id="@+id/removeFromWishlist"
+                android:id="@+id/removeFromFridge"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
