--- a/app/src/main/res/layout/activity_my_beers_listentry.xml
+++ b/app/src/main/res/layout/activity_my_beers_listentry.xml
@@ -51,6 +51,26 @@
                 app:layout_constraintTop_toBottomOf="@+id/onTheListSince" />
 
             <Button
+                android:id="@+id/addToFridge"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="85dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="1dp"
+                android:layout_weight="1"
+                android:drawableTop="@drawable/ic_refrigerator"
+                android:drawableTint="@color/colorPrimary"
+                android:text="Hinzufügen"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/removeFromWishlist"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/textView4"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
                 android:id="@+id/removeFromWishlist"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
