--- a/app/src/main/res/layout/activity_my_ratings.xml
+++ b/app/src/main/res/layout/activity_my_ratings.xml
@@ -23,6 +23,7 @@
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/ToolBarStyle"
             android:background="?attr/colorPrimary"
+            app:titleTextColor="?attr/colorAccent"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
