--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,6 +13,7 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ToolBarStyle"
+        app:titleTextColor="?attr/colorAccent"
         app:title="Einstellungen" />
 
     <CheckBox
