--- a/app/src/main/res/layout/fragment_profile_screen.xml
+++ b/app/src/main/res/layout/fragment_profile_screen.xml
@@ -63,7 +63,8 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/minimum_margin"
-                    app:srcCompat="@drawable/ic_bottle" />
+                    app:srcCompat="@drawable/ic_bottle"
+                    android:tint="?attr/colorAccent" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -105,7 +106,8 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/minimum_margin"
-                    app:srcCompat="@drawable/ic_star_brown_24dp" />
+                    app:srcCompat="@drawable/ic_star_brown_24dp"
+                    android:tint="?attr/colorAccent" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -148,7 +150,8 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/minimum_margin"
-                    app:srcCompat="@drawable/ic_bookmark_brown_24dp" />
+                    app:srcCompat="@drawable/ic_bookmark_brown_24dp"
+                    android:tint="?attr/colorAccent" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -191,7 +194,8 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/minimum_margin"
-                    app:srcCompat="@drawable/ic_refrigerator" />
+                    app:srcCompat="@drawable/ic_refrigerator"
+                    android:tint="?attr/colorAccent" />
 
                 <TextView
                     android:layout_width="0dp"
