--- a/app/src/main/res/layout/fragment_searchsuggestion_listentry.xml
+++ b/app/src/main/res/layout/fragment_searchsuggestion_listentry.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/selectable_item_background_white"
+    android:background="?attr/colorBackground"
     android:orientation="horizontal">
-
 
     <ImageView
         android:layout_width="wrap_content"
@@ -16,7 +15,8 @@
         android:layout_marginEnd="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin"
         android:layout_marginBottom="8dp"
-        app:srcCompat="@drawable/ic_search_black_24dp" />
+        app:srcCompat="@drawable/ic_search_black_24dp"
+        android:tint="?attr/colorAccent"/>
 
     <TextView
         android:id="@+id/content"
@@ -25,6 +25,5 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="@dimen/text_margin"
         android:layout_marginRight="@dimen/text_margin"
-        android:layout_marginBottom="8dp"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_marginBottom="8dp" />
 </LinearLayout>
