--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,15 +5,13 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/windowBackgroundColor</item>
-
+        <item name="colorBackground">@color/windowBackgroundColor</item>
         <!-- enable window content transitions -->
-        <item name="android:windowActivityTransitions">true</item>
 
         <!-- specify shared element transitions -->
         <item name="android:windowSharedElementEnterTransition">@transition/change_view_transform</item>
         <item name="android:windowSharedElementExitTransition">@transition/change_view_transform</item>
     </style>
-
 
     <style name="DetailsPageTheme" parent="AppTheme">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
@@ -75,6 +73,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark_dark</item>
         <item name="colorAccent">@color/colorAccent_dark</item>
         <item name="android:windowBackground">@color/windowBackgroundColor_dark</item>
+        <item name="colorBackground">@color/windowBackgroundColor_dark</item>
 
         <!-- enable window content transitions -->
         <item name="android:windowActivityTransitions">true</item>
