--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -240,16 +240,16 @@
                                 android:background="#ffeeeeee" />
 
                             <Button
-                                android:id="@+id/button2"
-                                style="?android:attr/borderlessButtonStyle"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:drawableTop="@drawable/ic_share_black_24dp"
-                                android:drawableTint="@android:color/darker_gray"
-                                android:text="Bier Teilen"
-                                android:textColor="@android:color/darker_gray"
-                                android:textSize="10sp" />
+                                    android:id="@+id/share"
+                                    style="?android:attr/borderlessButtonStyle"
+                                    android:layout_width="0dp"
+                                    android:layout_height="wrap_content"
+                                    android:layout_weight="1"
+                                    android:drawableTop="@drawable/ic_share_black_24dp"
+                                    android:drawableTint="@android:color/darker_gray"
+                                    android:text="Bier Teilen"
+                                    android:textColor="@android:color/darker_gray"
+                                    android:textSize="10sp"/>
                         </LinearLayout>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
